--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "astro": "^3.6.4",
     "astro-compress": "^2.0.15",
     "resend": "^3.2.0",
-    "swiper": "^11.0.4",
+    "swiper": "^11.0.7",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "pwa-asset-generator": "^6.3.1"
   }
 }
