--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "astro-compress": "^2.0.15",
     "resend": "^3.2.0",
     "swiper": "^11.0.7",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
